client/sass/main.scss
/*
**************************************************************** SASS variables
*/

// ------------------------------------------   Colors
$fox-red: #e44333;
$fox-dark-red:#cf3c2d;
$fox-light-red: #ff6151;
$fox-dark-gray:#566171;
$fox-gray: #788493;
$fox-light-gray: #c8d4d9;
$fox-gray-table-row: #b4c0c5;
$background: #f5f5f5;

// ------------------------------------------ Resopnsive breakpoints
$tablet-breakpoint: 992px;
$mobile-breakpoint: 768px;
$small-phones-breakpoint: 600px;

// ------------------------------------------  Fonts

// ------------------------------------------  Main elements sizes
// Keeping everything as a variable helps defining other element sizes,
// see .main-element below
$header-height: 12vh;

$navbar-desktop-height: 6vh;
$navbar-tablet-height: 8vmax;
$navbar-mobile-height: 12vmax;
$navbar-landscape-width: 12vw;

$action-bar-tablet-height: 8vmax;
$action-bar-mobile-height: 10vmax;

$tabs-desktop-height: 5vh;
$tabs-tablet-height: 4vmax;
$tabs-mobile-height: 6vmax;

// Main elements (alarm table, canera accordion, ...)
$main-element-size: 70vh;

$alpha: 0.8; // Transparency


/*
**************************************************************** Main rules
*/

html {
    height: 100vh;
    overflow: hidden; // Prevent overscrolling
    -webkit-overflow-scrolling: touch;
}

@media screen and (min-width: $tablet-breakpoint){
    body {
        font-size: 14px;
    }
}
@media screen and (max-width: $tablet-breakpoint - 1px){
    body {
        font-size: 14px;
        background-color: $background;
        overflow: hidden;
    }
}
@media screen and (max-width: $small-phones-breakpoint - 1px){
    body {
        font-size: 12px;
    }
}

body {
    height: 100%;
    padding: 0;
    box-sizing: border-box; // Or padding messes up the height
    overflow: hidden;
    margin: 0;
}

a, a:link, a:visited, a:hover, a:active {
    color: black;
    text-decoration: none;
}

a:hover {
    text-decoration: none;
    font-weight: bold;
    color: black;
    cursor: pointer;
}

ul {
    padding: 0;
    list-style: none;
    vertical-align: middle;
}

// App name in header or on login page on mobile devices
.app-name {
    font-size: 1.5em;
    color: $fox-red;
}

.panel {
    background: transparent;
}

// Add margin on desktop devices
@media screen and (min-width: $tablet-breakpoint){
    .content {
        // margin-top: 10vh; 
    }
}

// On mobile devices, remove the padding set by bootstrap
@media screen and (max-width: $mobile-breakpoint - 1px){
    .col-xs-12 {
        padding: 0;
    }
}

// ---------------------------------------------- Main-element
// Desktop devices
@media screen and (min-width: $tablet-breakpoint){
    .main-element {
        height: 100vh
            - $header-height
            - $navbar-desktop-height
            - 10vh;
        overflow-y: scroll;
    }
}

// Mobile devices
@media screen and (max-width: $tablet-breakpoint - 1px)
{

    .main-element {
        height: 100vh;
        overflow: scroll;
    }

}

// Tablet, portrait mode
@media screen and (max-width: $tablet-breakpoint - 1px) and (orientation: portrait){
    .main-element {
        padding-top: $action-bar-tablet-height + $tabs-tablet-height + 3vmax;
        padding-bottom: $navbar-tablet-height + 2vmax;       
    }
    .newserver, .newuser {
        padding-top: $action-bar-tablet-height + 3vmax;
    }
}

// Tablet, landscape mode
@media screen and (max-width: $tablet-breakpoint - 1px) and (orientation: landscape){
    .main-element {
        padding-top: $action-bar-tablet-height + $tabs-tablet-height + 3vmax;
        padding-bottom: 2vmax;       
    }
    .newserver, .newuser {
        padding-top: $action-bar-tablet-height + 3vmax;
    }
}

// Small phones, portrait mode
@media screen and (max-width: $small-phones-breakpoint - 1px) and (orientation: portrait){

    .main-element {
        padding-top: $action-bar-mobile-height + $tabs-mobile-height + 3vmax;
        padding-bottom: $navbar-mobile-height + 2vmax;
    }
    .newserver, .newuser {
        padding-top: $action-bar-mobile-height + 3vmax;
    }

}

// Small phones, landscape mode
@media screen and (max-width: $small-phones-breakpoint - 1px) and (orientation: landscape){

    .main-element {
        padding-top: $action-bar-mobile-height + $tabs-mobile-height + 3vmax;
        padding-bottom: 2vmax;
    }
    .newserver, .newuser {
        padding-top: $action-bar-mobile-height + 3vmax;
    }

}



@media screen and (max-width: $tablet-breakpoint - 1px) and (orientation: landscape){
    .page-content {
        margin-left: $navbar-landscape-width;
    }
}

canvas {
    display: block; // Default is inline or whatever so it adds a white space below the canvas
}


.logviewer {
    width: 70%;
    margin: auto;
    height: 100vh
        - $header-height
        - $navbar-desktop-height
        - 10vh;
    overflow: scroll;
    border: solid black 1px;
    padding: 1%;
    white-space: pre;
}

.imagecanvas {
    width: 100%;
}


/*
**************************************************************** Imports
*/
@import "swiper.scss";
@import "form.scss";
@import "table.scss";
@import "header.scss";
@import "navbar.scss";
@import "action-buttons.scss";
@import "login.scss";
@import "alarms.scss";
@import "live.scss";
@import "settings.scss";
@import "tabs.scss";
@import "block-header.scss";
@import "notifications.scss";
@import "help.scss";

